@@ -1,18 +1,15 @@
 package org.toolkit.spring.boot.scanner.lifecycle;
 
-import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import io.github.classgraph.ClassGraph;
-import io.reactivex.rxjava3.core.Observable;
-import io.reactivex.rxjava3.schedulers.Schedulers;
 import jakarta.annotation.PostConstruct;
-
-import java.util.concurrent.Executors;
-
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import lombok.val;
 import org.toolkit.spring.boot.scanner.base.ScannerResultProcessor;
 import org.toolkit.spring.boot.utils.bean.BeanUtil;
+
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.Executors;
 
 @Slf4j
 @RequiredArgsConstructor
@@ -25,14 +22,13 @@ public class Scanner {
     public void scan() {
         val processors = beanUtil.getBeansOfType(ScannerResultProcessor.class);
         log.atInfo().log("Scanners:{}", processors);
-        try (val executor = Executors.newFixedThreadPool(
-                processors.size(),
-                new ThreadFactoryBuilder().setNameFormat("Scanner-%s").build())) {
+        try (val executor = Executors.newVirtualThreadPerTaskExecutor()) {
             try (val result = classGraph.scan(Runtime.getRuntime().availableProcessors())) {
-                Observable.fromIterable(processors)
-                        .flatMap(processor -> Observable.fromRunnable(() -> processor.process(result))
-                                .subscribeOn(Schedulers.from(executor)))
-                        .blockingSubscribe(); // Wait for all tasks to complete
+                val scanners = processors.stream()
+                        .map(processor-> CompletableFuture.runAsync(()->processor.process(result),executor)
+                        )
+                        .toArray(CompletableFuture[]::new);
+                CompletableFuture.allOf(scanners);
                 executor.shutdown();
             }
         }
